more spacing fixed

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -478,8 +478,7 @@ html, body {
     font-family: 'Source Sans Pro';
     font-weight: 300;
     word-wrap: break-word;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 0px;
 
 }
 
